# catgrad

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  daily.yml
catgrad/: Cargo.toml
catgrad-core/: Cargo.toml
catgrad-core/examples/: README.md  hidden.rs
catgrad-core/src/category/: core.rs
catgrad-core/src/check/: apply.rs
catgrad-core/src/interpreter/: tensor_op.rs
catgrad-core/src/interpreter/backend/: candle.rs  mod.rs  ndarray.rs  shape_only.rs
catgrad-legacy/: Cargo.toml
catgrad-legacy/src/backend/cpu/: eval.rs  kernel.rs
catgrad-legacy/src/core/: operation.rs
catgrad-llm/: Cargo.toml  README.md
catgrad-llm-models/: Cargo.toml  README.md
catgrad-llm-models/examples/: dump_model.rs
catgrad-llm-models/src/: config.rs  error.rs  lib.rs  model_utils.rs  utils.rs
catgrad-llm-models/src/helpers/: approx.rs  conv.rs  mod.rs  module.rs  tensors.rs
catgrad-llm-models/src/models/: conformer.rs  deepseek.rs  gemma3.rs  gemma4.rs  gemma4_unified.rs  granite.rs  lfm2.rs  mistral3.rs  mod.rs  siglip.rs  smolvlm2.rs
catgrad-llm/examples/: README.md  bert.rs  gpt2.rs  model_runner.rs  serve.rs
catgrad-llm/examples/llama/: llm_config.default.toml  main.rs  tools.rs
catgrad-llm/examples/llm/: llm.py  main.rs
catgrad-llm/examples/siglip/: main.rs
catgrad-llm/examples/vlm/: main.rs
catgrad-llm/proptest-regressions/runtime/chat/: turn_accumulator.txt
catgrad-llm/proptest-regressions/runtime/chat/wire/: pump.txt
catgrad-llm/scripts/: convert_talkie.py  daily.sh  llm.py  llm_talkie.py
catgrad-llm/scripts/compare/: compare.sh  talkie_compare.sh
catgrad-llm/scripts/compare/expected/: HuggingFaceTB-SmolLM2-135M-Instruct  HuggingFaceTB-SmolVLM2-256M-Video-Instruct  Qwen-Qwen3-0.6B  Qwen-Qwen3.5-0.8B  ibm-granite-granite-3.1-1b-a400m-instruct
catgrad-llm/scripts/compare/expected/40/: LiquidAI-LFM2-350M  LiquidAI-LFM2.5-1.2B-Instruct_tool_use  LiquidAI-LFM2.5-VL-450M  Qwen-Qwen3-0.6B_tool_use  Qwen-Qwen3.5-0.8B_tool_use  allenai-OLMo-2-0425-1B-Instruct  google-gemma-3-270m-it  google-gemma-4-E2B-it  meta-llama-Llama-3.2-1B-Instruct  microsoft-Phi-4-mini-instruct  mistralai-Ministral-3-3B-Instruct-2512-BF16  nvidia-NVIDIA-Nemotron-3-Nano-4B-BF16  openai-community-gpt2
catgrad-llm/src/: api.rs  config.rs  error.rs  helpers.rs  helpers_tests.rs  lib.rs  model_media.rs  model_utils.rs  run.rs  utils.rs
catgrad-llm/src/helpers/: cache.rs  conv.rs  deltanet.rs  detokenize.rs  mod.rs  module.rs  rope.rs  tensors.rs  tests.rs  tool_calls.rs
catgrad-llm/src/legacy/models/: deepseek.rs  glm4.rs  gpt_oss.rs  lfm2.rs  mod.rs  utils.rs
catgrad-llm/src/legacy/nn/: rope.rs
catgrad-llm/src/models/: deepseek.rs  gemma3.rs  gemma4.rs  gpt2.rs  gpt_oss.rs  granite.rs  lfm2.rs  llama.rs  mistral3.rs  mod.rs  nemotron.rs  olmo.rs  phi3.rs  qwen3.rs  qwen3_5.rs  siglip.rs  smolvlm2.rs  talkie.rs
catgrad-llm/src/prompt/: decode.rs  mod.rs  parse.rs  prepare.rs
catgrad-llm/src/runtime/: decode_loop.rs  mod.rs  text_decoder.rs  text_execution.rs  text_program.rs
catgrad-llm/src/runtime/chat/: event.rs  mod.rs  parser.rs  protocol.rs  tool_spec.rs  turn.rs  turn_accumulator.rs
catgrad-llm/src/runtime/chat/protocols/: mod.rs  qwen3.rs  test_util.rs
catgrad-llm/src/runtime/chat/wire/: anthropic.rs  failure.rs  mod.rs  openai.rs  pump.rs
catgrad-llm/src/types/: anthropic.rs  mod.rs  openai.rs  plain.rs
catgrad-llm/src/utils/: audio.rs  gguf.rs  images.rs  mod.rs  prompt.rs
catgrad-mlir/: Cargo.toml  README.md
catgrad-mlir/demo/: main.c  run.sh
catgrad-mlir/examples/: e2e.rs  mlir-llm.rs  mlir.rs  runtime.rs
catgrad-mlir/scripts/: codegen.sh
catgrad-mlir/src/: codegen.rs  runtime.rs
catgrad-mlir/src/lower/: emit_mlir.rs  functor.rs  inline.rs  ops.rs  preprocess.rs
catgrad-mlir/tests/: test_ops.rs
catgrad/examples/: hidden.rs
catgrad/src/: lib.rs  path.rs  prelude.rs
catgrad/src/abstract_interpreter/: eval.rs  parameters.rs  types.rs
catgrad/src/backend/cpu/: kernel.rs
catgrad/src/category/: core.rs
catgrad/src/category/lang/: ops.rs  types.rs
catgrad/src/cid/: dag_cbor.rs  mod.rs  serde_impls.rs  typed.rs
catgrad/src/definition/: types.rs
catgrad/src/interpreter/: interpreter.rs  mod.rs  parameters.rs  tensor_op.rs  types.rs
catgrad/src/interpreter/backend/: candle.rs  mod.rs  ndarray.rs  shape_only.rs
catgrad/src/pass/: to_core.rs
catgrad/src/runtime/: bound.rs  error.rs  mod.rs  program.rs  session.rs  snapshot.rs
catgrad/src/stdlib/: mod.rs  module.rs  ops.rs
catgrad/src/stdlib/nn/: mod.rs
catgrad/src/typecheck/: display.rs  interpreter.rs  tensor_op.rs  value_types.rs
catgrad/tests/: test_if.rs  test_interpreter_candle.rs
examples/: inference.rs  model.py  nn.rs  params.rs
examples/llm/: main.rs
src/: egg_optimizer.rs  lib.rs
src/backend/cpu/: eval.rs  kernel.rs  ndarray.rs
src/core/: nn.rs  object.rs  operation.rs
src/core/nn/: layers.rs
