[package]
name = "catgrad-llm-models"
description = "Model-building support for large language models in catgrad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
catgrad = { version = "0.2.1", path = "../catgrad", features = ["serde"] }
open-hypergraphs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
half = { workspace = true }
float8 = { workspace = true }
thiserror = "2.0"
image = "0.25.6"

[dev-dependencies]
clap = { workspace = true }
toml = "0.8"
env_logger = "0.11"
anyhow = "1.0.99"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
