[package]
name = "catgrad-llm"
description = "High-level support for large language models in catgrad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
catgrad = {version = "0.2.1", path = "../catgrad", features=["serde", "dag-cbor", "runtime"]}
open-hypergraphs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true , features=["preserve_order"]}
tokenizers = { workspace = true, default-features = false, features = ["progressbar", "fancy-regex"] }

# TODO: remove these?
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
minijinja = { version = "2.11.0", features = ["json", "preserve_order"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
memmap2 = { workspace = true }
safetensors = {workspace = true}
log = "0.4.27"
half = { workspace = true }
thiserror = "2.0"
rayon = "1.11.0"
image = "0.25.6"
chrono = "0.4.41"
jsonschema = { version = "0.36", default-features = false }
typed-builder = "0.23"
serde_with = { version = "3.17", default-features = false, features = ["macros"] }
serde_path_to_error = "0.1"
ureq = "2.12.1"
url = "2.5.7"

# onig (C regex) and esaxx (C++ BPE trainer) pull libstdc++ into the link.
# Skip on static musl (no libstdc++.a) and Windows (mingw mcfgthread include
# paths aren't sandbox-friendly); fancy-regex covers both.
[target.'cfg(not(any(target_env = "musl", target_os = "windows")))'.dependencies]
tokenizers = { workspace = true, features = ["onig", "esaxx_fast"] }


[features]
# Enable CUDA-backed candle for tests/examples. Forwards to `catgrad/cuda`
# via the dev-dep below; the dependency line itself can't carry conditional
# features so we expose it here.
cuda = ["catgrad/cuda"]
# Same shape for Apple Metal.
metal = ["catgrad/metal"]

[dev-dependencies]
clap = { workspace = true }
toml = "0.8"
graphviz-rust = "0.9.5"
open-hypergraphs-dot = "0.2.4"
env_logger = "0.11"
test-log = "0.2.17"
catgrad = {path = "../catgrad", features=["ndarray-backend", "candle-backend", "svg", "serde"]}
anyhow = "1.0.99"
tiny_http = "0.12"
# Macro identifier concatenation for the (model × dtype × backend) test
# matrix in `tests/text_session_split_stability.rs`.
paste = "1"
proptest = "1"
