[package]
name = "catgrad"
version = "0.2.1"
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
open-hypergraphs = { workspace = true }
graphviz-rust = { version = "0.9.5", optional = true }
open-hypergraphs-dot = { version = "0.2.4", optional = true }
serde = { workspace = true, optional = true }
half = { workspace = true }
thiserror = "2"
blake3 = { version = "1", optional = true }
serde_ipld_dagcbor = { version = "0.6.4", optional = true }

# Interpreter backends (optional)
ndarray = { version = "0.17.1", optional = true }
candle-core = { version = "0.10.1", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
candle-backend = ["dep:candle-core"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
svg = ["dep:graphviz-rust", "dep:open-hypergraphs-dot"]
serde = ["dep:serde", "open-hypergraphs/serde"]
# `dag-cbor` enables the canonical DAG-CBOR encoding helpers and tensor
# blob primitives in `cid::dag_cbor`. Pulls in `blake3` and
# `serde_ipld_dagcbor` only at this level.
dag-cbor = ["serde", "dep:blake3", "dep:serde_ipld_dagcbor"]
